# C23-Kilo-From-Scratch

./: CMakeLists.txt  LICENSE  README.md
include/: abuf.h  editor.h  input.h  output.h  terminal.h
src/: abuf.c  input.c  main.c  output.c  terminal.c
